--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-matplotlib==3.8.2
-numpy==1.26.4
-pandas==2.2.0
-scikit-learn==1.4.0
-streamlit==1.31.1
-pickleshare==0.7.5
-joblib==1.3.2
+streamlit==1.35.0
+tensorflow-cpu==2.14.0
+numpy==1.24.3
+pandas==1.5.3
+scikit-learn==1.2.2
